--- a/animism-site/src/components/WikiSidebar/WikiSidebar.module.css
+++ b/animism-site/src/components/WikiSidebar/WikiSidebar.module.css
@@ -84,7 +84,7 @@
   
   .dropdown {
     position: absolute;
-    top: 100%;
+    top: calc(100% - 1.2rem);
     left: 0;
     width: 100%;
     background-color: var(--code-bg);
@@ -95,6 +95,8 @@
     overflow-y: auto;
     z-index: 900;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.06);
+    list-style-type: none;
+    padding: 0 .5rem .5rem .5rem;
   }
   
   .dropdownDivider {
