Changed nexus article

--- a/animism-site/src/pages/[...slug].astro
+++ b/animism-site/src/pages/[...slug].astro
@@ -18,5 +18,5 @@ const html = page.rendered?.html;
 
 <PageLayout>
   <h1>{page.data.title}</h1>
-  <article set:html={html}></article>
+  <article set:html={html} />
 </PageLayout>
