--- a/animism-site/src/styles/global.css
+++ b/animism-site/src/styles/global.css
@@ -210,7 +210,9 @@ ul li::marker {
   color: var(--accent-2);
 }
 
-
+img {
+  width: 100%;
+}
 
 /* ──────────────────────────────────────────
       💻 Code
